<resources>
    <string name="app_name">TellToo</string>
    <string name="title_activity_main_nav">MainNavActivity</string>

    <!--All the navbar stings-->
    <string name="title_front">Feed</string>
    <string name="title_explore">Explore</string>
    <string name="title_create">Create</string>
    <string name="title_me">Me</string>
    <string name="title_community">Community</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="search_hint">Search stories...</string>

    <!--String for Feature page (Community)-->
    <string name="front_title_collection">TellToo Collections</string>

    <!--Strings for create page-->
    <string name="create_btn_save_txt">Save</string>
    <string name="create_btn_chain_txt">React</string>
    <string name="create_btn_reply_txt">Reply</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Sign up strings -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_page_title">Hello, stranger!</string>
    <string name="sign_up_page_desc">Welcome to TellToo!</string>
    <string name="sign_up_default_name">CowardlyPurpleElephant</string>
    <string name="sign_up_divider_text">OR</string>
    <string name="remember_me">Remember me</string>
    <string name="name_input_hint">Name</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="pick_a_name">Pick a name</string>

    <!-- Sign in strings -->
    <string name="sign_in_page_title">Hello, stranger!</string>
    <string name="sign_in_page_desc">Remind us who you are.</string>
    <string name="sign_in_enter_name">Name or email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="sign_in_later">Maybe later</string>
    <string name="forgot_page_desc">You forgot your password! We\'ll email you a code so you can reset your password.</string>
    <string name="darn">Darn.</string>
    <string name="sign_up_name_hint">Pick a name</string>
    <string name="sign_up_pass_hint">Enter a password</string>
    <string name="auth_choice_page_desc">You need an account to do that.</string>
    <string name="tag_page_title">Tags</string>
    <string name="tag_page_desc">Tag the content of your story so the community can find it!</string>
    <string name="explore_back_text"><![CDATA[< Back]]></string>

    <string name="capstone_night_description">Tonight is a special night full of promising projects! TellToo will facilitate this exciting moment by bringing together the stories of tonight. By donating (with completely imaginary money), you help fund and support future capstone projects as well as receive a collection of every story told tonight! </string>

</resources>
