<RelativeLayout
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bauble_app.bauble.FrontFragment"
    android:gravity="center|top"
    android:layout_marginTop="60dp"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp"
    android:layout_marginBottom="30dp"
    >

    <com.bauble_app.bauble.CustomText
        android:id="@+id/sign_up_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_page_title"
        android:textAlignment="center"
        />

    <com.bauble_app.bauble.CustomText
        android:id="@+id/sign_up_page_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_page_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up_page_desc"
        android:textAlignment="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_name_input_container"
            android:layout_below="@id/sign_up_page_desc"
            android:layout_marginTop="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            >

            <RelativeLayout
                android:id="@+id/sign_up_name_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/sign_up_name_input"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/edit_text_height"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="@drawable/edittext"
                    android:hint="@string/sign_up_name_hint"
                    android:layout_marginRight="20dp"/>

                <ImageButton
                    android:id="@+id/sign_up_refresh_btn"
                    android:layout_width="@dimen/edit_text_height"
                    android:layout_height="@dimen/edit_text_height"
                    android:background="@drawable/btn_circle_bg"
                    app:srcCompat="@drawable/ic_signup_refresh"
                    android:layout_marginLeft="20dp"
                    android:contentDescription=""
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@id/sign_up_name_input"
                    />
            </RelativeLayout>

        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_pass_input_container"
        android:layout_below="@+id/sign_up_name_input_container"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/sign_up_pass_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@drawable/edittext"
            android:hint="@string/sign_up_pass_hint"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_email_input_container"
        android:layout_below="@id/sign_up_pass_input_container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/sign_up_email_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext"
            android:hint="@string/enter_your_email"/>

    </android.support.design.widget.TextInputLayout>

    <com.bauble_app.bauble.CustomButton
        android:id="@+id/sign_up_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_weight="1"
        android:background="@drawable/btn_forgot"
        android:text="Sign Up"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/sign_up_email_input_container"
        android:orientation="horizontal"
        android:gravity="top|center"
        android:paddingTop="7dp"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        />

    <com.bauble_app.bauble.CustomButton
        android:id="@+id/sign_up_cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:paddingTop="7dp"
        android:layout_below="@id/sign_up_submit_btn"
        android:background="@drawable/btn_signin"
        android:layout_alignLeft="@id/sign_up_name_input_container"
        android:layout_alignRight="@id/sign_up_name_input_container"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:text="Cancel"
        android:gravity="top|center"
        />

</RelativeLayout>